--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
 	  "noImplicitAny": true,
 	  "module": "commonjs",
 	  "target": "es6",
-	  "allowJs": true
+		"allowJs": true,
+		"typeRoots": [
+			"./node_modules/@types"
+		]
 	}
-  }
-  
+}  
