--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/webfontloader": "^1.6.29",
     "phaser-ce": "^2.10.0",
     "phaser-state-transition": "^2.5.1",
+    "rxjs": "^5.5.8",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
